--- a/package.json
+++ b/package.json
@@ -3,15 +3,30 @@
   "version": "2.9.1",
   "description": "Common utility functions to use with d3",
   "devDependencies": {
+    "fun": "^1.4.0",
+    "d3": "^3.5.13",
     "ez-doc": "github:zambezi/ez-doc",
-    "grunt": "~0.4.1"
+    "jquery": "^2.2.1",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.5.2",
+    "karma-mocha": "^0.1.3",
+    "karma-requirejs": "^0.2.5",
+    "karma-sinon-chai": "^0.1.6",
+    "mocha": "^2.4.5",
+    "requirejs": "^2.1.22",
+    "squirejs": "^0.2.1",
+    "underscore": "^1.8.3"
   },
-  "peerDependencies": {
+  "optionalDependencies": {
     "text": "^2.0.10"
   },
   "repository": {
     "type": "git",
     "url": "https://git@github.com:zambezi/d3-utils.git"
+  },
+  "scripts": {
+    "test": "karma start --single-run"
   },
   "license": "MIT"
 }
