--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "type": "git",
     "url": "https://git@github.com:zambezi/d3-utils.git"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@zambezi/fun": "1.4.1"
+  }
 }
