--- a/package.json
+++ b/package.json
@@ -2,11 +2,36 @@
   "name": "@zambezi/d3-utils",
   "version": "2.9.2",
   "description": "Common utility functions to use with d3",
-  "devDependencies": {},
+  "keywords": [
+    "d3"
+  ],
+  "scripts": {
+    "build": "mkdirp dist && rollup -c",
+    "clean": "rimraf dist",
+    "watch": "rollup -c -w",
+    "test": "mocha",
+    "pretest": "npm run clean && npm run build",
+    "prepublish": "npm test"
+  },
+  "license": "MIT",
+  "main": "dist/d3-utils.js",
+  "homepage": "https://github.com/zambezi/d3-utils",
   "repository": {
     "type": "git",
     "url": "https://git@github.com:zambezi/d3-utils.git"
   },
-  "license": "MIT",
-  "dependencies": {}
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-register": "^6.9.0",
+    "babelrc-rollup": "^2.0.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.5.3",
+    "rimraf": "^2.5.3",
+    "rollup": "^0.26.3",
+    "rollup-plugin-babel": "^2.3.9"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
+  }
 }
