--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zambezi/d3-utils",
-  "version": "2.9.2",
+  "version": "3.0.0-0",
   "description": "Common utility functions to use with d3",
   "keywords": [
     "d3"
