--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "url": "https://git@github.com:zambezi/d3-utils.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
-    "babel-register": "^6.9.0",
-    "babelrc-rollup": "^2.0.0",
-    "mkdirp": "^0.5.1",
-    "mocha": "^2.5.3",
-    "rimraf": "^2.5.3",
-    "rollup": "^0.26.3",
-    "rollup-plugin-babel": "^2.3.9"
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-es2015-rollup": "1.1.1",
+    "babel-register": "6.9.0",
+    "babelrc-rollup": "2.0.0",
+    "mkdirp": "0.5.1",
+    "mocha": "2.5.3",
+    "rimraf": "2.5.3",
+    "rollup": "0.26.3",
+    "rollup-plugin-babel": "2.3.9"
   },
   "dependencies": {
     "d3-selection": "^1.0.2",
