--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-babel": "2.3.9"
   },
   "dependencies": {
+    "d3-dispatch": "^1.0.1",
     "d3-selection": "^1.0.2",
     "underscore": "^1.8.3"
   }
