--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf dist",
     "watch": "rollup -c -w",
     "test": "mocha",
+    "docs": "ez-doc build",
     "pretest": "npm run clean && npm run build",
     "prepublish": "npm test"
   },
