--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zambezi/d3-utils",
-  "version": "3.2.0",
+  "version": "3.3.0-skip-when-hidden.0",
   "description": "Common utility functions to use with d3",
   "keywords": [
     "d3"
