--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zambezi/d3-utils",
-  "version": "3.4.0-unsubscribe-on-destroy.1",
+  "version": "3.4.0",
   "description": "Common utility functions to use with d3",
   "keywords": [
     "d3"
