--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "build": "mkdirp dist && rollup -c",
     "clean": "rimraf dist",
     "watch": "rollup -c -w",
-    "test": "mocha",
+    "test": "standard && mocha",
     "docs": "ez-doc build",
     "pretest": "npm run clean && npm run build",
     "prepublish": "npm test"
+  },
+  "standard": {
+    "env": [ "mocha" ]
   },
   "license": "MIT",
   "main": "dist/d3-utils.js",
@@ -31,7 +34,8 @@
     "rimraf": "2.5.3",
     "rollup": "^0.34.10",
     "rollup-plugin-babel": "2.3.9",
-    "rollup-watch": "^2.5.0"
+    "rollup-watch": "^2.5.0",
+    "standard": "^9.0.2"
   },
   "dependencies": {
     "d3-dispatch": "^1.0.1",
